--- a/portal/docker/server/Dockerfile
+++ b/portal/docker/server/Dockerfile
@@ -10,8 +10,14 @@ ENV ENABLE_ALLOWLIST=${ENABLE_ALLOWLIST}
 ARG ENABLE_BLOCKLIST="false"
 ENV ENABLE_BLOCKLIST=${ENABLE_BLOCKLIST}
 
-ARG ENABLE_SENTRY="false"
+ARG ENABLE_SENTRY="true"
 ENV ENABLE_SENTRY=${ENABLE_SENTRY}
+
+ARG SENTRY_DSN=""
+ENV SENTRY_DSN=${SENTRY_DSN}
+
+ARG AMPLITUDE_API_KEY=""
+ENV AMPLITUDE_API_KEY=${AMPLITUDE_API_KEY}
 
 ARG ENABLE_VERCEL_WEB_ANALYTICS="false"
 ENV ENABLE_VERCEL_WEB_ANALYTICS=${ENABLE_VERCEL_WEB_ANALYTICS}
